fix: change Rect.Ref to React.RefObject

--- a/src/elements/Input/styles/base.css
+++ b/src/elements/Input/styles/base.css
@@ -139,6 +139,8 @@
 }
 
 .input--waiting {
+  pointer-events: none;
+
   &:not(.input--with-icon) {
     animation: input-waiting 1.5s linear infinite;
   }
