--- a/src/elements/CheckboxSmart/styles/base.css
+++ b/src/elements/CheckboxSmart/styles/base.css
@@ -10,29 +10,45 @@
   --this-padding-inline: 1em;
   --this-padding-block: 0.75em;
 
-  --this-spinner-color: var(--color-first);
+  /* this */
+
+  --this-text-color: var(--control-text-color);
   --this-background-color: var(--control-background-color);
+  --this-border-color: var(--control-border-color);
 
-  --unchecked-border-color: var(--control-border-color);
-  --checked-border-color: var(--color-first);
+  --this-hover-text-color: var(--control-hover-text-color);
+  --this-hover-background-color: var(--control-hover-background-color);
+  --this-hover-border-color: var(--control-hover-border-color);
 
-  --unchecked-icon-background-color: var(--control-background-color);
-  --unchecked-icon-border-color: var(--control-border-color);
+  --this-focus-text-color: var(--control-focus-text-color);
+  --this-focus-background-color: var(--control-focus-background-color);
+  --this-focus-border-color: var(--control-focus-border-color);
 
-  --unchecked-hover-icon-background-color: var(--color-first-white-90);
-  --unchecked-hover-icon-border-color: var(--color-first);
+  --this-checked-border-color: var(--color-first);
 
-  --unchecked-active-icon-background-color: var(--color-first-white-80);
-  --unchecked-active-icon-border-color: var(--color-first);
+  /* this-icon */
 
-  --checked-icon-background-color: var(--color-first);
-  --checked-icon-border-color: var(--color-first);
+  --this-icon-background-color: var(--control-background-color);
+  --this-icon-border-color: var(--control-border-color);
 
-  --checked-hover-icon-background-color: var(--color-first-white-10);
-  --checked-hover-icon-border-color: var(--color-first);
+  --this-hover-icon-background-color: var(--color-first-white-90);
+  --this-hover-icon-border-color: var(--color-first);
 
-  --checked-active-icon-background-color: var(--color-first-white-20);
-  --checked-active-icon-border-color: var(--color-first);
+  --this-active-icon-background-color: var(--color-first-white-80);
+  --this-active-icon-border-color: var(--color-first);
+
+  --this-checked-icon-background-color: var(--color-first);
+  --this-checked-icon-border-color: var(--color-first);
+
+  --this-checked-hover-icon-background-color: var(--color-first-white-10);
+  --this-checked-hover-icon-border-color: var(--color-first);
+
+  --this-checked-active-icon-background-color: var(--color-first-white-20);
+  --this-checked-active-icon-border-color: var(--color-first);
+
+  /* this-spinner */
+
+  --this-spinner-color: var(--color-first);
 
   position: relative;
   display: inline-flex;
@@ -43,19 +59,39 @@
   gap: 0.5em;
   font-size: var(--this-font-size);
   line-height: 1.3em;
-  color: var(--body-text-color);
+  color: var(--this-text-color);
+  background-color: var(--this-background-color);
   cursor: pointer;
   border-style: solid;
   border-width: var(--control-border-width);
   border-radius: var(--control-border-radius);
-  border-color: var(--unchecked-border-color);
-  background-color: var(--this-background-color);
+  border-color: var(--this-border-color);
+
+  &:hover {
+    color: var(--this-hover-text-color);
+    background-color: var(--this-hover-background-color);
+    border-color: var(--this-hover-border-color);
+  }
+
+  &:focus {
+    color: var(--this-focus-text-color);
+    background-color: var(--this-focus-background-color);
+    border-color: var(--this-focus-border-color);
+  }
 }
 
 .checkbox-smart--checked {
-  border-color: var(--checked-border-color);
-  outline: 1px solid var(--checked-border-color);
+  border-color: var(--this-checked-border-color);
+  outline: 0.5px solid var(--this-checked-border-color);
   outline-offset: 0;
+
+  &:hover {
+    border-color: var(--this-checked-border-color);
+  }
+
+  &:focus {
+    border-color: var(--this-checked-border-color);
+  }
 }
 
 .checkbox-smart--disabled {
@@ -91,48 +127,61 @@
   align-items: center;
   justify-content: center;
   color: white;
-  background-color: var(--unchecked-icon-background-color);
+  background-color: var(--this-icon-background-color);
   background-position: center;
   background-size: 50%;
   background-repeat: no-repeat;
-  border: 1.5px solid var(--unchecked-icon-border-color);
+  border: 1.5px solid var(--this-icon-border-color);
   border-radius: 3px;
   cursor: pointer;
 
   .checkbox-smart:hover & {
-    background-color: var(--unchecked-hover-icon-background-color);
-    border-color: var(--unchecked-hover-icon-border-color);
+    background-color: var(--this-hover-icon-background-color);
+    border-color: var(--this-hover-icon-border-color);
   }
 
   .checkbox-smart:active & {
-    background-color: var(--unchecked-active-icon-background-color);
-    border-color: var(--unchecked-active-icon-border-color);
+    background-color: var(--this-active-icon-background-color);
+    border-color: var(--this-active-icon-border-color);
   }
 
   .checkbox-smart--checked & {
-    background-color: var(--checked-icon-background-color);
-    border-color: var(--checked-icon-border-color);
+    background-color: var(--this-checked-icon-background-color);
+    border-color: var(--this-checked-icon-border-color);
 
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='white' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
   }
 
   .checkbox-smart--checked:hover & {
-    background-color: var(--checked-hover-icon-background-color);
-    border-color: var(--checked-hover-icon-border-color);
+    background-color: var(--this-checked-hover-icon-background-color);
+    border-color: var(--this-checked-hover-icon-border-color);
   }
 
   .checkbox-smart--checked:active & {
-    background-color: var(--checked-active-icon-background-color);
-    border-color: var(--checked-active-icon-border-color);
+    background-color: var(--this-checked-active-icon-background-color);
+    border-color: var(--this-checked-active-icon-border-color);
   }
 
   .checkbox-smart--invalid & {
-    --unchecked-icon-border-color: var(--color-error);
-    --unchecked-hover-icon-border-color: var(--color-error);
-    --unchecked-active-icon-border-color: var(--color-error);
-    --checked-icon-border-color: var(--color-error);
-    --checked-hover-icon-border-color: var(--color-error);
-    --checked-active-icon-border-color: var(--color-error);
+    --this-text-color: var(--control-invalid-text-color);
+    --this-background-color: var(--control-invalid-background-color);
+    --this-border-color: var(--control-invalid-border-color);
+
+    --this-hover-text-color: var(--control-invalid-text-color);
+    --this-hover-background-color: var(--control-invalid-background-color);
+    --this-hover-border-color: var(--control-invalid-border-color);
+
+    --this-focus-text-color: var(--control-invalid-text-color);
+    --this-focus-background-color: var(--control-invalid-background-color);
+    --this-focus-border-color: var(--control-invalid-border-color);
+
+    --this-icon-border-color: var(--color-error);
+    --this-hover-icon-border-color: var(--color-error);
+    --this-active-icon-border-color: var(--color-error);
+
+    --this-checked-icon-border-color: var(--color-error);
+    --this-checked-hover-icon-border-color: var(--color-error);
+    --this-checked-active-icon-border-color: var(--color-error);
   }
 }
 
@@ -190,126 +239,4 @@
 
 .checkbox-smart--extra {
   --this-font-size: var(--font-size-extra);
-}
-
-/* Цвета */
-
-.checkbox-smart--grey {
-  --this-spinner-color: var(--color-grey);
-  --checked-border-color: var(--color-grey);
-
-  --unchecked-hover-icon-background-color: var(--color-grey-white-90);
-  --unchecked-hover-icon-border-color: var(--color-grey);
-
-  --unchecked-active-icon-background-color: var(--color-grey-white-80);
-  --unchecked-active-icon-border-color: var(--color-grey);
-
-  --checked-icon-background-color: var(--color-grey);
-  --checked-icon-border-color: var(--color-grey);
-
-  --checked-hover-icon-background-color: var(--color-grey-white-10);
-  --checked-hover-icon-border-color: var(--color-grey);
-
-  --checked-active-icon-background-color: var(--color-grey-white-20);
-  --checked-active-icon-border-color: var(--color-grey);
-}
-
-.checkbox-smart--first {
-  --this-spinner-color: var(--color-first);
-  --checked-border-color: var(--color-first);
-
-  --unchecked-hover-icon-background-color: var(--color-first-white-90);
-  --unchecked-hover-icon-border-color: var(--color-first);
-
-  --unchecked-active-icon-background-color: var(--color-first-white-80);
-  --unchecked-active-icon-border-color: var(--color-first);
-
-  --checked-icon-background-color: var(--color-first);
-  --checked-icon-border-color: var(--color-first);
-
-  --checked-hover-icon-background-color: var(--color-first-white-10);
-  --checked-hover-icon-border-color: var(--color-first);
-
-  --checked-active-icon-background-color: var(--color-first-white-20);
-  --checked-active-icon-border-color: var(--color-first);
-}
-
-.checkbox-smart--second {
-  --this-spinner-color: var(--color-second);
-  --checked-border-color: var(--color-second);
-
-  --unchecked-hover-icon-background-color: var(--color-second-white-90);
-  --unchecked-hover-icon-border-color: var(--color-second);
-
-  --unchecked-active-icon-background-color: var(--color-second-white-80);
-  --unchecked-active-icon-border-color: var(--color-second);
-
-  --checked-icon-background-color: var(--color-second);
-  --checked-icon-border-color: var(--color-second);
-
-  --checked-hover-icon-background-color: var(--color-second-white-10);
-  --checked-hover-icon-border-color: var(--color-second);
-
-  --checked-active-icon-background-color: var(--color-second-white-20);
-  --checked-active-icon-border-color: var(--color-second);
-}
-
-.checkbox-smart--third {
-  --this-spinner-color: var(--color-third);
-  --checked-border-color: var(--color-third);
-
-  --unchecked-hover-icon-background-color: var(--color-third-white-90);
-  --unchecked-hover-icon-border-color: var(--color-third);
-
-  --unchecked-active-icon-background-color: var(--color-third-white-80);
-  --unchecked-active-icon-border-color: var(--color-third);
-
-  --checked-icon-background-color: var(--color-third);
-  --checked-icon-border-color: var(--color-third);
-
-  --checked-hover-icon-background-color: var(--color-third-white-10);
-  --checked-hover-icon-border-color: var(--color-third);
-
-  --checked-active-icon-background-color: var(--color-third-white-20);
-  --checked-active-icon-border-color: var(--color-third);
-}
-
-.checkbox-smart--success {
-  --this-spinner-color: var(--color-success);
-  --checked-border-color: var(--color-success);
-
-  --unchecked-hover-icon-background-color: var(--color-success-white-90);
-  --unchecked-hover-icon-border-color: var(--color-success);
-
-  --unchecked-active-icon-background-color: var(--color-success-white-80);
-  --unchecked-active-icon-border-color: var(--color-success);
-
-  --checked-icon-background-color: var(--color-success);
-  --checked-icon-border-color: var(--color-success);
-
-  --checked-hover-icon-background-color: var(--color-success-white-10);
-  --checked-hover-icon-border-color: var(--color-success);
-
-  --checked-active-icon-background-color: var(--color-success-white-20);
-  --checked-active-icon-border-color: var(--color-success);
-}
-
-.checkbox-smart--error {
-  --this-spinner-color: var(--color-error);
-  --checked-border-color: var(--color-error);
-
-  --unchecked-hover-icon-background-color: var(--color-error-white-90);
-  --unchecked-hover-icon-border-color: var(--color-error);
-
-  --unchecked-active-icon-background-color: var(--color-error-white-80);
-  --unchecked-active-icon-border-color: var(--color-error);
-
-  --checked-icon-background-color: var(--color-error);
-  --checked-icon-border-color: var(--color-error);
-
-  --checked-hover-icon-background-color: var(--color-error-white-10);
-  --checked-hover-icon-border-color: var(--color-error);
-
-  --checked-active-icon-background-color: var(--color-error-white-20);
-  --checked-active-icon-border-color: var(--color-error);
 }
