fix: add underline none for hover Button

--- a/src/elements/Button/styles/base.css
+++ b/src/elements/Button/styles/base.css
@@ -111,6 +111,10 @@
 .button--underline-dashed,
 .button--underline-dotted {
   text-decoration: underline;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 .button--underline-solid {
