--- a/src/elements/Toggle/styles/base.css
+++ b/src/elements/Toggle/styles/base.css
@@ -61,8 +61,8 @@
   position: absolute;
   left: 2px;
   top: 2px;
-  width: var(--this-icon-size);
-  height: var(--this-icon-size);
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
   margin: 0;
 
   .toggle--waiting & {
@@ -71,14 +71,21 @@
 }
 
 .toggle__container {
-  transition: 0.15s ease-in;
-  display: block;
   position: relative;
-  height: calc(var(--this-icon-size) + 6px);
+  height: calc(var(--this-icon-size) + 4px);
+  width: calc(var(--this-icon-size) * 2.1);
+}
+
+.toggle__back {
+  transition: 0.15s ease-in;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   border: 1px solid var(--this-border-color);
   border-radius: calc((var(--this-icon-size) + 6px) / 2);
   background-color: var(--this-background-color);
-  width: calc(var(--this-icon-size) * 2.1);
 
   .toggle:hover & {
     background-color: var(--this-hover-background-color);
@@ -145,7 +152,7 @@
 
 .toggle__title {
   flex-grow: 1;
-  margin-top: 0.05em;
+  margin-top: 0.025em;
 
   & a[href] {
     color: inherit;
